# sudoku

./: Cargo.toml  Dockerfile  README.md
benches/: generate.rs  solve.rs
c/: .clang-format  .gitignore  Makefile  board.c  board.h  board_test.c  cli.c  cli.h  fs.h  hashtable.c  hashtable.h  hashtable_test.c  links.c  links.h  links_test.c  list.c  list.h  list_test.c  main.c  random.c  sudoku.c  sudoku.h  sudoku_test.c
c_sudoku/: .gitignore  Makefile  backtracking.c  board.c  board.h  cli.c  cli.h  dancing_links.c  dancing_links.h  dancing_links_test.c  dfs.c  grid.c  grid.h  heuristic.c  links.c  links.h  links_test.c  list.c  list.h  list_test.c  main.c  random.c  random.h  sudoku  sudoku.c  sudoku.h  sudoku_test.c
crates/sudoku/: Cargo.toml
crates/sudoku-cli/: Cargo.toml
crates/sudoku-cli/src/: file.rs
crates/sudoku-cli/src/commands/: solve.rs
crates/sudoku/src/: bfs.rs  board.rs
crates/sudoku/src/board/: bitfield.rs  grid.rs
scripts/: x.py
src/: bfs.rs  board.rs  board_generator.rs  cli.rs  commands.rs  destination.rs  dfs.rs  file.rs  grid.rs  heuristics.rs  lib.rs  main.rs  rng.rs
src/board/: bitfield.rs  board.rs  dfs.rs  generator.rs  grid.rs  heuristics.rs  mod.rs
src/cli/: generate.rs  solve.rs
src/commands/: generate.rs  show.rs  solve.rs
sudoku-cli/src/: cli.rs  commands.rs  file.rs  lib.rs  main.rs
sudoku-cli/src/commands/: generate.rs  show.rs  solve.rs
sudoku/benches/: solve.rs
sudoku/src/: board.rs  grid.rs  lib.rs
sudoku/src/board/: grid.rs
tests/: bitfield.rs
