[package]
name = "sudoku"
version = "1.0.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
anyhow.workspace = true
clap.workspace = true
itertools.workspace = true
rand.workspace = true
rand_chacha.workspace = true
tracing.workspace = true
uuid.workspace = true

[[bench]]
name = "solve"
harness = false
